# AI-Powered-Customer-Support-Agent-with-Memory-and-Tool-Calling

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
customer_support_agent/api/: app_factory.py
customer_support_agent/api/routers/: drafts.py
customer_support_agent/integrations/memory/: mem0_store.py
customer_support_agent/integrations/rag/: chroma_kb.py
customer_support_agent/schemas/: api.py
customer_support_agent/services/: copilot_service.py
data/: support.db
data/chroma_mem0/: chroma.sqlite3
data/chroma_rag/: chroma.sqlite3
data/mem0-qdrant/: meta.json
data/mem0-qdrant/collection/mem0/: storage.sqlite
data/mem0-qdrant/collection/mem0_entities/: storage.sqlite
notebooks/: experiments.ipynb
notebooks/data/mem0-qdrant/: meta.json
notebooks/data/mem0-qdrant/collection/mem0/: storage.sqlite
notebooks/data/mem0-qdrant/collection/mem0_entities/: storage.sqlite
