[project]
name = "ai-powered-customer-support-agent-with-memory-and-tool-calling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "groq<1",
    "mem0ai[nlp]",
    "ipykernel",
    "asttokens",
    "fastembed>=0.8.0",
    "langchain-groq>=1.1.3",
    "langchain>=1.3.10",
    "pydantic-settings>=2.14.2",
    "chromadb>=1.5.9",
    "fastapi>=0.138.1",
    "streamlit>=1.58.0",
    "pydantic[email]>=2.13.4",
    "google-genai>=2.10.0",
    "requests>=2.34.2",
]
